# chatting

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.bbmb  docker-compose.e2e.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: __init__.py  cli.py  github_ingress_runtime.py  internal_heartbeat.py  internal_notices.py  main.py  main_auxiliary_ingress.py  main_github_ingress.py  main_message_handler.py  main_reply.py  main_worker.py  message_handler_runtime.py  models.py  task_ledger.py  telegram_text.py  telemetry.py  worker_runtime.py
configs/: auxiliary-ingress-runtime.example.json  chatting-github-ingress.env.example  chatting-live.env.example  chatting-message-handler.env.example  chatting-worker.env.example  codex-execution-result.schema.json  github-ingress-runtime.example.json  handler.env.example  handler.json.example  live-runtime.example.json  live-schedule.example.json  message-handler-runtime.example.json  worker-runtime.example.json  worker.env.example  worker.json.example
docs/: README.md  bbmb-message-flow.md  debug-and-test.md  quick-start.md  run-live.md  run-split-bbmb.md
plans/: ci-workflow-plan.md  implementation-plan.md  logging-overhaul-plan.md  milestone-01-bootstrap.md  milestone-02-telegram-integration.md  milestone-03-bbmb-split.md  milestone-03-llm-memory-layer.md  milestone-04-realtime-reply-api.md  milestone-05-github-issue-assignment.md  system-backlog.md
tests/: test_applier.py  test_broker_client.py  test_broker_messages.py  test_connectors.py  test_contract_fixtures.py  test_e2e_handler_selector.py  (+20 more)
(+147 files in other folders)
